// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correlation-id-test includes correlation id in json output, if available 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [
    Array [
      "{\\"timestamp\\":1,\\"context\\":\\"cid-test\\",\\"logLevel\\":\\"INFO\\",\\"details\\":[{\\"key\\":\\"test-value\\"}],\\"correlationId\\":\\"testId\\"}",
      "INFO",
      "cid-test",
    ],
  ],
  "WARN" => Array [],
  "ERROR" => Array [],
}
`;

exports[`correlation-id-test includes correlation id in text output, if available 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [
    Array [
      "[1] INFO cid-test this is a simple test [correlation-id=testId]",
      "INFO",
      "cid-test",
    ],
  ],
  "WARN" => Array [],
  "ERROR" => Array [],
}
`;
